add domain interface
